force-app/main/default/objects/ssot__CaseUpdate__dlm/fields/ssot__CaseUpdate_CaseId_map_Case_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__CaseUpdate_CaseId_map_Case_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseUpdate_CaseId_map_Case_Id_N_1</label>
    <referenceTo>ssot__Case__dlm</referenceTo>
    <relationshipLabel>CaseUpdate_CaseId_map_Case_Id_N_1</relationshipLabel>
    <relationshipName>CaseUpdate_CaseId_map_Case_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>