force-app/main/default/objects/ssot__CaseUpdate__dlm/fields/ssot__PreviousUpdateDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__PreviousUpdateDateTime__c</fullName>
    <label>Previous Update Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>PreviousUpdateDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>