force-app/main/default/objects/ssot__CaseUpdate__dlm/fields/ssot__rel_1697761226314_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1697761226314_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CaseUpdate_LastModifiedById_map_User_rel</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>CaseUpdate_LastModifiedById_map_User_rel</relationshipLabel>
    <relationshipName>rel_1697761226314_end</relationshipName>
    <type>Lookup</type>
</CustomField>