force-app/main/default/objects/ssot__CaseUpdate__dlm/fields/ssot__RelatedOwnerId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RelatedOwnerId__c</fullName>
    <label>Related Owner</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RelatedOwnerId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>